syntax = "proto3";
package pd;
option go_package = "common/protobuf";

message DataRequest { string key = 1; }
message DataResponse { string data = 1; }
