syntax = "proto3";
package pd;
option go_package = "common/pd";
import "common.proto";

service ServiceA {
    rpc GetData(DataRequest) returns (DataResponse);
}
